Fix nutrients not spawning

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <div class="controls-grid">
         <button id="btnReseed">Reseed Env</button>
         <button id="btnShake">Season Pulse</button>
+        <button id="btnRunTests" title="Run diagnostic tests">🧪 Tests</button>
       </div>
       <div class="small">Hotkeys: <span class="kbd">Space</span> Step • <span class="kbd">P</span> Pause/Play • <span class="kbd">R</span> Reset • <span class="kbd">S</span> Screenshot</div>
     </div>
