--- a/tests/test-runner.html
+++ b/tests/test-runner.html
@@ -112,6 +112,7 @@
     <button id="runEcosystemTests">Run Ecosystem Tests</button>
     <button id="runEnvironmentTests">Run Environment Tests</button>
     <button id="runBugFixTests">Run Bug Fix Tests</button>
+    <button id="runUITests">Run UI Tests</button>
     <button id="clearResults">Clear Results</button>
 </div>
 
@@ -175,6 +176,7 @@
 <script src="test-ecosystem.js"></script>
 <script src="test-environment.js"></script>
 <script src="test-bugfixes.js"></script>
+<script src="test-ui.js"></script>
 
 <script>
     // Test runner UI
@@ -249,7 +251,8 @@
             {name: 'Colony Tests', fn: runColonyTests},
             {name: 'Ecosystem Tests', fn: runEcosystemTests},
             {name: 'Environment Tests', fn: runEnvironmentTests},
-            {name: 'Bug Fix Tests', fn: runBugFixTests}
+            {name: 'Bug Fix Tests', fn: runBugFixTests},
+            {name: 'UI Tests', fn: runUITests}
         ];
 
         for (const suite of testSuites) {
@@ -270,6 +273,7 @@
     document.getElementById('runEcosystemTests').addEventListener('click', () => runTestSuite('Ecosystem Tests', runEcosystemTests).then(showSummary));
     document.getElementById('runEnvironmentTests').addEventListener('click', () => runTestSuite('Environment Tests', runEnvironmentTests).then(showSummary));
     document.getElementById('runBugFixTests').addEventListener('click', () => runTestSuite('Bug Fix Tests', runBugFixTests).then(showSummary));
+    document.getElementById('runUITests').addEventListener('click', () => runTestSuite('UI Tests', runUITests).then(showSummary));
     document.getElementById('clearResults').addEventListener('click', clearResults);
 </script>
 </body>
